<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ItemForm">

    <TextView
            android:text="@string/lblIdTxtInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblId" android:textStyle="bold"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <TextView
            android:layout_width="220dp"
            android:layout_height="40dp" android:id="@+id/txtId"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/lblId" android:layout_marginStart="8dp"
            android:textAlignment="center" android:textStyle="bold" android:textSize="24sp"
            android:backgroundTint="#AEDA9E"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp" android:id="@+id/lblCarModel"
            android:text="@string/lblCarModel"
            app:layout_constraintTop_toTopOf="@id/lblId"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp" android:textSize="18sp" android:layout_marginStart="16dp"/>
    <EditText
            android:labelFor="@id/lblCarModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txtHintCarModel"
            android:ems="10"
            android:id="@+id/editTxtCarModel" app:layout_constraintTop_toBottomOf="@id/lblCarModel"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:autofillHints=""/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp" android:id="@+id/lblCarBrand"
            android:text="@string/lblCarBrand"
            app:layout_constraintTop_toBottomOf="@+id/editTxtCarModel" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp" android:textSize="18sp"/>
    <EditText
            android:labelFor="@id/lblCarBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTxtCarBrand" app:layout_constraintTop_toBottomOf="@id/lblCarBrand"
            android:hint="@string/txtHintCarBrand"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="" android:inputType="text"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp" android:id="@+id/lblCarColor"
            android:text="@string/lblCarColor"
            app:layout_constraintTop_toBottomOf="@id/editTxtCarBrand"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="18sp"/>
    <EditText
            android:labelFor="@id/lblCarColor"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTxtCarColor"
            android:hint="@string/txtHintCarColor"
            app:layout_constraintTop_toBottomOf="@id/lblCarColor"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent" android:autofillHints=""/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp" android:id="@+id/lblPubYear"
            app:layout_constraintTop_toBottomOf="@id/editTxtCarColor"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:text="@string/lblPubYear" android:textSize="18sp"/>
    <EditText
            android:labelFor="@id/lblPubYear"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTxtPubYear"
            app:layout_constraintTop_toBottomOf="@id/lblPubYear"
            android:hint="@string/txtHintPubYear"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent" android:autofillHints=""/>

    <Button
            android:text="@string/btnSave"
            android:layout_width="190dp"
            android:layout_height="wrap_content" android:id="@+id/btnSave"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/editTxtPubYear"
            android:layout_marginTop="58dp"/>
    <Button
            android:layout_height="wrap_content" android:id="@+id/btcCancel"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/btnCancel"
            android:textSize="14sp" android:layout_width="190dp"
            app:layout_constraintTop_toBottomOf="@+id/editTxtPubYear" android:layout_marginTop="58dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>